[project]
name = "sieve_mol_interactions"
version = "0.1.0"
description = "Library for determining and filtering by molecular interactions, including protein–ligand interactions, protein–protein interactions, etc."
readme = "README.md"
authors = [
    { name = "Ian Scott Knight", email = "isk@alumni.stanford.edu" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
sieve-mol-interactions = "sieve_mol_interactions:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
